styles/base.css
html,
body {
  width: 100vw;
  overflow-x: hidden;
  overscroll-behavior: none;

  @media (--lg) {
    overscroll-behavior: auto;
    /* overscroll-behavior-y: none; */
  }
}

* {
  scrollbar-width: thin;
  scrollbar-color: var(--gray-z-2) transparent;
}

